--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,19 @@
 *.i*86
 *.x86_64
 *.hex
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+#Specific Paths
+/2014Robot/Documentation/*
